Fix CORS SecurityConfig pour prod